--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quiz-questions-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/RickBr0wn/quiz-questions-api/issues"
   },
-  "homepage": "https://github.com/RickBr0wn/quiz-questions-api#readme"
+  "homepage": "https://github.com/RickBr0wn/quiz-questions-api#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
